--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/HeroBornWebBuild.loader.js";
+      var loaderUrl = buildUrl + "/HeroBornWebBuild2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/HeroBornWebBuild.data",
-        frameworkUrl: buildUrl + "/HeroBornWebBuild.framework.js",
-        codeUrl: buildUrl + "/HeroBornWebBuild.wasm",
+        dataUrl: buildUrl + "/HeroBornWebBuild2.data",
+        frameworkUrl: buildUrl + "/HeroBornWebBuild2.framework.js",
+        codeUrl: buildUrl + "/HeroBornWebBuild2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "hero born",
